# TestSqlx

./: .gitignore
PostgreSQL/: docker-compose.yml
sqlx-test/: .env.example  Cargo.toml
sqlx-test/src/: drop.rs  migrate.rs
sqlx-test/src/config/: connection.rs
sqlx-test/src/migrations/: 20231015120000_create_table.sql
sqlx-test/src/querys/: 20231015120000_drop_all_table.sql
