[package]
name = "sqlx-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "migrate"
path = "src/migrate.rs"

[[bin]]
name = "drop_table"
path = "src/drop.rs"

[dependencies]
dotenv = "0.15"
lazy_static = "1.4"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "chrono"] }
anyhow = "=1.0.75"
once_cell = "=1.18"
chrono = "=0.4.31"
